Support for AEM 6.1 Forms FP1
Former-commit-id: baa4a1bed68e5f63821eccf06b8aff0bb80895f6
Former-commit-id: 8313be921b3c2d02f206f06f6b28bee6037160ba
Former-commit-id: 8fe3ec54d95fcf89f323a1acda69721d02ad380d